--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grupo_11_viveronaturalia",
   "version": "1.0.0",
   "description": "Proyecto Integrador Grupo 11 Vivero",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
