--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
   "name": "grupo_11_viveronaturalia",
   "version": "1.0.0",
-  "description": "Proyecto Integrador Grupo 11 Vivero",
-  "main": "app.js",
+  "description": "---\r Proyecto Integrador\r ---",
+  "main": "appnpm .js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JaraGla/Grupo_11_ViveroNaturalia.git"
   },
-  "author": "Gladis Jaramillo",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JaraGla/Grupo_11_ViveroNaturalia/issues"
   },
   "homepage": "https://github.com/JaraGla/Grupo_11_ViveroNaturalia#readme",
   "dependencies": {
-    "express": "^4.18.1",
-    "mysql2": "^2.3.3",
-    "nodemon": "^2.0.19",
-    "sequelize": "^6.21.4"
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "method-override": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
