--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "---\r Proyecto Integrador\r ---",
   "main": "appnpm .js",
   "scripts": {
-    "test": "nodemon src/app.js"
+    "test": "nodemon src/app.js",
+    "dev": "nodemon src/app.js",
+    "start": "node src/app"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "method-override": "^3.0.0"
+    "multer": "^1.4.5-lts.1",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
