--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "save": "^2.9.0"
   },
   "devDependencies": {
